<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"       android:icon="@drawable/ic_home"            android:title="@string/menu_home" />
    <item android:id="@+id/qrScannerFragment"  android:icon="@drawable/ic_qr_scan"         android:title="@string/menu_qr_scanner" />
    <item android:id="@+id/inventarioFragment" android:icon="@drawable/ic_clipboard_check" android:title="@string/menu_inventario" />
    <item android:id="@+id/syncFragment"       android:icon="@drawable/ic_sync"            android:title="@string/menu_sync" />
    <item android:id="@+id/transfersFragment"  android:icon="@drawable/ic_truck_24"        android:title="@string/menu_transfers" />
    <item android:id="@+id/incidentsFragment"  android:icon="@drawable/ic_alert_24"        android:title="@string/menu_incidencias" />
    <item android:id="@+id/eventHistoryFragment" android:icon="@drawable/ic_history_24"     android:title="@string/menu_event_history" />
    <item android:id="@+id/settingsFragment"   android:icon="@drawable/ic_settings"        android:title="@string/menu_settings" />
</menu>
