<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment"       android:name="com.example.hassiwrapper.ui.home.HomeFragment"           android:label="@string/menu_home">
        <action android:id="@+id/action_homeFragment_to_scannerFragment"      app:destination="@id/scannerFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_homeFragment_to_vehiclesFragment"     app:destination="@id/vehiclesFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_homeFragment_to_packingListsFragment" app:destination="@id/packingListsFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_homeFragment_to_inventarioFragment"   app:destination="@id/inventarioFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/qrScannerFragment" android:name="com.example.hassiwrapper.ui.qrscanner.QrScannerFragment"   android:label="@string/menu_qr_scanner">
        <action android:id="@+id/action_qrScannerFragment_to_vehicleDetailFragment" app:destination="@id/vehicleDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/scannerFragment"    android:name="com.example.hassiwrapper.ui.createspool.CreateSpoolFragment" android:label="@string/menu_scanner">
        <action android:id="@+id/action_scannerFragment_to_newSpoolFragment" app:destination="@id/newSpoolFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/newSpoolFragment"   android:name="com.example.hassiwrapper.ui.newspool.NewSpoolFragment"       android:label="@string/new_spool_title">
        <argument android:name="prefillSpoolCode" app:argType="string" app:nullable="true" android:defaultValue="@null" />
    </fragment>
    <fragment android:id="@+id/packingListsFragment" android:name="com.example.hassiwrapper.ui.packinglists.PackingListsFragment" android:label="@string/menu_passport">
        <action android:id="@+id/action_packingListsFragment_to_newPackingListFragment"      app:destination="@id/newPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_packingListsFragment_to_packingListDetailFragment"   app:destination="@id/packingListDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_packingListsFragment_to_sendPackingListFragment"     app:destination="@id/sendPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_packingListsFragment_to_receivePackingListFragment"  app:destination="@id/receivePackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/newPackingListFragment" android:name="com.example.hassiwrapper.ui.packinglists.NewPackingListFragment" android:label="@string/new_packing_list_title">
        <argument android:name="vehicleId"    app:argType="long"   android:defaultValue="0L" />
        <argument android:name="vehiclePlate" app:argType="string" app:nullable="true" android:defaultValue="@null" />
    </fragment>
    <fragment android:id="@+id/packingListDetailFragment" android:name="com.example.hassiwrapper.ui.packinglists.PackingListDetailFragment" android:label="@string/pl_detail_title">
        <argument android:name="packingListId" app:argType="long" android:defaultValue="0L" />
        <action android:id="@+id/action_packingListDetailFragment_to_editPackingListFragment" app:destination="@id/editPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/editPackingListFragment" android:name="com.example.hassiwrapper.ui.packinglists.EditPackingListFragment" android:label="@string/pl_edit_title">
        <argument android:name="packingListId" app:argType="long" android:defaultValue="0L" />
    </fragment>
    <fragment android:id="@+id/syncFragment"       android:name="com.example.hassiwrapper.ui.sync.SyncFragment"            android:label="@string/menu_sync" />
    <fragment android:id="@+id/vehiclesFragment" android:name="com.example.hassiwrapper.ui.vehicles.VehiclesFragment" android:label="@string/menu_vehicles">
        <action android:id="@+id/action_vehiclesFragment_to_newVehicleFragment"          app:destination="@id/newVehicleFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_vehiclesFragment_to_vehicleDetailFragment"       app:destination="@id/vehicleDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_vehiclesFragment_to_sendPackingListFragment"     app:destination="@id/sendPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_vehiclesFragment_to_receivePackingListFragment"  app:destination="@id/receivePackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/inventarioFragment" android:name="com.example.hassiwrapper.ui.inventario.InventarioFragment" android:label="@string/menu_inventario">
        <argument android:name="initialTab" app:argType="integer" android:defaultValue="0" />
    </fragment>
    <fragment android:id="@+id/transfersFragment" android:name="com.example.hassiwrapper.ui.transfers.TransfersFragment" android:label="@string/menu_transfers">
        <action android:id="@+id/action_transfersFragment_to_sendPackingListFragment"    app:destination="@id/sendPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_transfersFragment_to_receivePackingListFragment" app:destination="@id/receivePackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/sendPackingListFragment"    android:name="com.example.hassiwrapper.ui.transfers.SendPackingListFragment"    android:label="@string/transfer_send_title" />
    <fragment android:id="@+id/receivePackingListFragment" android:name="com.example.hassiwrapper.ui.transfers.ReceivePackingListFragment" android:label="@string/transfer_receive_title" />
    <fragment android:id="@+id/newVehicleFragment" android:name="com.example.hassiwrapper.ui.vehicles.NewVehicleFragment" android:label="@string/new_vehicle_title">
        <argument android:name="prefillPlate" app:argType="string" app:nullable="true" android:defaultValue="@null" />
    </fragment>
    <fragment android:id="@+id/vehicleDetailFragment" android:name="com.example.hassiwrapper.ui.vehicles.VehicleDetailFragment" android:label="@string/vehicle_detail_title">
        <argument android:name="vehicleId" app:argType="long" android:defaultValue="0L" />
        <action android:id="@+id/action_vehicleDetailFragment_to_editVehicleFragment" app:destination="@id/editVehicleFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/editVehicleFragment" android:name="com.example.hassiwrapper.ui.vehicles.EditVehicleFragment" android:label="@string/edit_vehicle_title">
        <argument android:name="vehicleId" app:argType="long" android:defaultValue="0L" />
    </fragment>
    <action android:id="@+id/action_global_vehicleDetailFragment"    app:destination="@id/vehicleDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_newSpoolFragment"        app:destination="@id/newSpoolFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_newVehicleFragment"      app:destination="@id/newVehicleFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_newPackingListFragment"   app:destination="@id/newPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_packingListDetailFragment" app:destination="@id/packingListDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_sendPackingListFragment" app:destination="@id/sendPackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    <action android:id="@+id/action_global_receivePackingListFragment" app:destination="@id/receivePackingListFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />

    <fragment android:id="@+id/eventHistoryFragment" android:name="com.example.hassiwrapper.ui.eventhistory.EventHistoryFragment" android:label="@string/menu_event_history" />
    <fragment android:id="@+id/spoolMapFragment" android:name="com.example.hassiwrapper.ui.spoolmap.SpoolMapFragment" android:label="@string/menu_map" />
    <fragment android:id="@+id/settingsFragment"   android:name="com.example.hassiwrapper.ui.settings.SettingsFragment"   android:label="@string/menu_settings" />
    <fragment android:id="@+id/incidentsFragment" android:name="com.example.hassiwrapper.ui.incidents.IncidentsFragment" android:label="@string/menu_incidencias">
        <action android:id="@+id/action_incidentsFragment_to_newIncidentFragment" app:destination="@id/newIncidentFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
        <action android:id="@+id/action_incidentsFragment_to_incidentDetailFragment" app:destination="@id/incidentDetailFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />
    </fragment>
    <fragment android:id="@+id/newIncidentFragment" android:name="com.example.hassiwrapper.ui.incidents.NewIncidentFragment" android:label="@string/new_incident_title" />
    <fragment android:id="@+id/incidentDetailFragment" android:name="com.example.hassiwrapper.ui.incidents.IncidentDetailFragment" android:label="@string/incident_detail_title">
        <argument android:name="incidentId" app:argType="long" android:defaultValue="0L" />
    </fragment>
    <action android:id="@+id/action_global_incidentsFragment" app:destination="@id/incidentsFragment"
        app:enterAnim="@anim/nav_enter"
        app:exitAnim="@anim/nav_exit"
        app:popEnterAnim="@anim/nav_pop_enter"
        app:popExitAnim="@anim/nav_pop_exit" />

</navigation>
